--- a/src/app/components/actor-alta/actor-alta.component.html
+++ b/src/app/components/actor-alta/actor-alta.component.html
@@ -1,1 +1,100 @@
-<p>actor-alta works!</p>
+<!doctype html>
+<html lang="en">
+
+  <body class="bg-light">
+
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-5 order-md-2 mb-4">
+          <h4 class="d-flex justify-content-between align-items-center mb-3">
+            <span class="text-muted">Tabla paises</span>
+            <span class="badge badge-secondary badge-pill">3</span>
+          </h4>
+          <ul class="list-group mb-3">
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+              <app-tabla-paises style="margin-left: -15%;margin-top: -15%;" (eventPaisSeleccionado)="cargarPais($event)" ></app-tabla-paises>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-7 order-md-1">
+          <h4 class="mb-3">Alta actor</h4>
+          <form class="needs-validation" novalidate [formGroup]="formActor">
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <label for="firstName">First name</label>
+                <input type="text" class="form-control"  formControlName="nombre" name="nombre">
+                <div class="invalid-feedback">
+                  Valid first name is required.
+                </div>
+              </div>
+              <div class="col-md-6 mb-3">
+                <label for="lastName">Last name</label>
+                <input type="text" class="form-control"  formControlName="apellido" name="apellido">
+                <div class="invalid-feedback">
+                  Valid last name is required.
+                </div>
+              </div>
+            </div>
+
+            <div class="mb-3">
+              <label for="username">Username</label>
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">@</span>
+                </div>
+                <input type="text" class="form-control" id="username" placeholder="Username" formControlName="nombreUsuario" name="nombreUsuario">
+                <div class="invalid-feedback" style="width: 100%;">
+                  Your username is required.
+                </div>
+              </div>
+            </div>
+
+            <div class="mb-3">
+              <label for="email">Email <span class="text-muted">(Optional)</span></label>
+              <input type="email" class="form-control" id="email" placeholder="you@example.com" formControlName="correo" name="correo">
+              <div class="invalid-feedback">
+                Please enter a valid email address for shipping updates.
+              </div>
+            </div>
+
+            <div class="mb-3">
+              <label for="address">Address</label>
+              <input type="text" class="form-control" id="address" placeholder="1234 Main St" formControlName="direccionUno" name="direccionUno">
+              <div class="invalid-feedback">
+                Please enter your shipping address.
+              </div>
+            </div>
+
+            <div class="mb-3">
+              <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
+              <input type="text" class="form-control" id="address2" placeholder="Apartment or suite" formControlName="direccionDos" name="direccionDos">
+            </div>
+
+            <div class="row">
+              <div class="col-md-5 mb-3">
+                <label for="country">Country</label>
+                <input class="custom-select d-block w-100" id="country" required readonly formControlName="pais" name="pais">
+                <div class="invalid-feedback">
+                  Please select a valid country.
+                </div>
+              </div>
+              <div class="col-md-4 mb-3">
+                <label for="state">State</label>
+                <input class="custom-select d-block w-100" id="state" required readonly formControlName="capital" name="capital">
+                <div class="invalid-feedback">
+                  Please provide a valid state.
+                </div>
+              </div>
+            </div>
+            <hr class="mb-4">
+            <button class="btn btn-primary btn-lg btn-block" type="submit" [disabled]="formActor.invalid" (click)="registrarActor()">Registrar</button>
+            <button class="btn btn-primary btn-lg btn-block" type="submit" style="margin-left: 5%;" (click)="consultarFire()">Consultar firestore</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+
+  </body>
+</html>
