Termino practica parcial 3

--- a/src/app/components/detalle-pelicula/detalle-pelicula.component.html
+++ b/src/app/components/detalle-pelicula/detalle-pelicula.component.html
@@ -3,6 +3,10 @@
     <p>Tipo: {{ pelicula.tipo }}</p>
     <p>Fecha de Estreno: {{ pelicula.fechaEstreno  | date:'dd/M/yyyy'  }}</p>
     <p>Cantidad de Público: {{ pelicula.cantidadPublico }}</p>
+    <p>Actores: </p>
+    <ul>
+      <li *ngFor="let actor of pelicula.actores">{{actor.nombre}},{{actor.apellido}}</li>
+    </ul>
     <p>Foto: <img [src]="pelicula.fotoPelicula" alt="{{ pelicula.nombre }}" width="200"></p>
   </div>
   
