--- a/src/app/components/actor-alta/actor-alta.component.html
+++ b/src/app/components/actor-alta/actor-alta.component.html
@@ -22,74 +22,64 @@
           <form class="needs-validation" novalidate [formGroup]="formActor">
             <div class="row">
               <div class="col-md-6 mb-3">
-                <label for="firstName">First name</label>
+                <label for="firstName">Nombre</label>
                 <input type="text" class="form-control"  formControlName="nombre" name="nombre">
-                <div class="invalid-feedback">
-                  Valid first name is required.
+                <div *ngIf="formActor.controls['nombre'].errors?.['required'] && formActor.controls['nombre'].touched"  style="color: red;">
+                  Nombre es requerido
                 </div>
               </div>
               <div class="col-md-6 mb-3">
-                <label for="lastName">Last name</label>
+                <label for="lastName">Apellido</label>
                 <input type="text" class="form-control"  formControlName="apellido" name="apellido">
-                <div class="invalid-feedback">
-                  Valid last name is required.
+                <div *ngIf="formActor.controls['apellido'].errors?.['required'] && formActor.controls['apellido'].touched"  style="color: red;">
+                  Apellido es requerido
                 </div>
               </div>
             </div>
 
             <div class="mb-3">
-              <label for="username">Username</label>
+              <label for="username">Nombre de usuario</label>
               <div class="input-group">
                 <div class="input-group-prepend">
                   <span class="input-group-text">@</span>
                 </div>
-                <input type="text" class="form-control" id="username" placeholder="Username" formControlName="nombreUsuario" name="nombreUsuario">
-                <div class="invalid-feedback" style="width: 100%;">
-                  Your username is required.
+                <input type="text" class="form-control" id="username" placeholder="NombreUsuario" formControlName="nombreUsuario" name="nombreUsuario">
+                <div *ngIf="formActor.controls['nombreUsuario'].errors?.['required'] && formActor.controls['nombreUsuario'].touched"  style="color: red;">
+                  Nombre de usuario es requerido
                 </div>
               </div>
             </div>
 
             <div class="mb-3">
-              <label for="email">Email <span class="text-muted">(Optional)</span></label>
-              <input type="email" class="form-control" id="email" placeholder="you@example.com" formControlName="correo" name="correo">
-              <div class="invalid-feedback">
-                Please enter a valid email address for shipping updates.
+              <label for="email">Correo<span class="text-muted">(Optional)</span></label>
+              <input type="email" class="form-control" id="email" placeholder="tu@correo.com" formControlName="correo" name="correo">
+            </div>
+
+            <div class="mb-3">
+              <label for="address">Direccion Uno</label>
+              <input type="text" class="form-control" id="address" placeholder="Calle 1234" formControlName="direccionUno" name="direccionUno">
+              <div *ngIf="formActor.controls['direccionUno'].errors?.['required'] && formActor.controls['direccionUno'].touched"  style="color: red;">
+                Direccion uno es requerido
               </div>
             </div>
 
             <div class="mb-3">
-              <label for="address">Address</label>
-              <input type="text" class="form-control" id="address" placeholder="1234 Main St" formControlName="direccionUno" name="direccionUno">
-              <div class="invalid-feedback">
-                Please enter your shipping address.
-              </div>
-            </div>
-
-            <div class="mb-3">
-              <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-              <input type="text" class="form-control" id="address2" placeholder="Apartment or suite" formControlName="direccionDos" name="direccionDos">
+              <label for="address2">Direccion Dos <span class="text-muted">(Optional)</span></label>
+              <input type="text" class="form-control" id="address2" placeholder="Calle 567" formControlName="direccionDos" name="direccionDos">
             </div>
 
             <div class="row">
               <div class="col-md-5 mb-3">
-                <label for="country">Country</label>
+                <label for="country">Pais</label>
                 <input class="custom-select d-block w-100" id="country" required readonly formControlName="pais" name="pais">
-                <div class="invalid-feedback">
-                  Please select a valid country.
-                </div>
               </div>
               <div class="col-md-4 mb-3">
-                <label for="state">State</label>
+                <label for="state">Capital</label>
                 <input class="custom-select d-block w-100" id="state" required readonly formControlName="capital" name="capital">
-                <div class="invalid-feedback">
-                  Please provide a valid state.
-                </div>
               </div>
             </div>
             <hr class="mb-4">
             <button class="btn btn-primary btn-lg btn-block" type="submit" [disabled]="formActor.invalid" (click)="registrarActor()">Registrar</button>
-            <button class="btn btn-primary btn-lg btn-block" type="submit" style="margin-left: 5%;" (click)="consultarFire()">Consultar firestore</button>
           </form>
         </div>
       </div>
