--- a/src/app/components/actor-listado/actor-listado.component.html
+++ b/src/app/components/actor-listado/actor-listado.component.html
@@ -1,1 +1,11 @@
-<app-tabla-actor [mostrarDatosCompletos]="true" [mostrarSeleccionar]="false"></app-tabla-actor>
+<div class="row">
+    <div class="col-2">
+
+    </div>
+    <div class="col-10">
+        <h1>Listado de actores</h1>
+    </div>
+    <div class="col-12">
+        <app-tabla-actor [mostrarDatosCompletos]="true" [mostrarSeleccionar]="false"></app-tabla-actor>
+    </div>
+</div>
