--- a/src/app/components/pelicula-listado/pelicula-listado.component.html
+++ b/src/app/components/pelicula-listado/pelicula-listado.component.html
@@ -1,1 +1,14 @@
-<app-tabla-pelicula [peliculas]="peliculas" [mostrarSeleccionar]="false"></app-tabla-pelicula>
+
+<div class="row">
+    <div class="col-2">
+
+    </div>
+    <div class="col-10">
+        <h1>Listado de peliculas</h1>
+    </div>
+    <div class="col-12">
+        <app-tabla-pelicula [peliculas]="peliculas" [mostrarSeleccionar]="false"></app-tabla-pelicula>
+    </div>
+</div>
+
+
