--- a/src/app/components/tabla-paises/tabla-paises.component.html
+++ b/src/app/components/tabla-paises/tabla-paises.component.html
@@ -5,6 +5,7 @@
         <thead>
           <tr>
             <th>Pais</th>
+            <th>Capital</th>
             <th>Bandera</th>
             <th *ngIf="mostrarSeleccionar">Seleccionar</th>
           </tr>
@@ -12,6 +13,7 @@
         <tbody>
           <tr *ngFor="let pais of paises">
             <td>{{ pais.nombre }}</td>
+            <td>{{ pais.capital }}</td>
             <td>
               <img [src]="pais.bandera" alt="{{ pais.bandera }}" width="100">
             </td>
