--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
+<div class="row">
+    <div class="col-12">
+        <app-menu></app-menu>
+    </div>
+    <div class="col-12">
+        <br>
+        <router-outlet></router-outlet>
+    </div>
+</div>
 
-<router-outlet></router-outlet>
