--- a/src/app/components/busqueda/busqueda.component.html
+++ b/src/app/components/busqueda/busqueda.component.html
@@ -1,28 +1,34 @@
 
 <main role="main">
-    <div class="container">
-        <h1 class="display-3">Listado de peliculas</h1>
+    <div class="row">
+      <div class="col-2"></div>
+      <div class="col-4">
+        <h1 class="display-3">Listado de peliculas </h1>
+      </div>
+      <div class="col-2" style="margin-left: -5%;margin-top: 1%;">
+        <button class="btn btn-primary" (click)="cambiarVista()" style="margin-left: 20%;" >Cambiar vista</button>
+      </div> 
     </div>
     
-    <app-tabla-pelicula [peliculas]="peliculas" (event)="mostrar($event)" *ngIf="mostrarOpciones;else elseBlock"></app-tabla-pelicula>
-    
-    <ng-template #elseBlock >
-        <button class="btn btn-primary" (click)="mostrar(null)" style="margin-left: 20%;" >Cambiar vista</button>
-        <div class="container" style="margin-top: 5%;">
+    <app-tabla-pelicula [peliculas]="peliculas" (event)="mostrar($event)" ></app-tabla-pelicula>
+    <br>
+    <div *ngIf="mostrarOpciones" >
+        <div class="container" >
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-2">
                 <h2>Borrar</h2>
+                <button class="btn btn-primary" (click)="borrarPelicula()">Borrar pelicula</button>
               </div>
               <div class="col-md-4">
                 <h2>Mostrar</h2>
                 <app-detalle-pelicula [pelicula]="peliculaSeleccionada"></app-detalle-pelicula>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-2">
                 <h2>Modificar</h2>
               </div>
             </div>
           </div> 
-    </ng-template>
+    </div>
   
   </main>
   
